--- a/src/components/ui/carousel.astro
+++ b/src/components/ui/carousel.astro
@@ -1,11 +1,12 @@
 ---
 interface Props {
+    active?: boolean;
     arrows?: boolean;
     name: string;
     visibleElements: Array<{breakpoint: number, items: number}>;
 }
 
-const { arrows = true, name, visibleElements } = Astro.props as Props;
+const { active = true, arrows = true, name, visibleElements } = Astro.props as Props;
 
 // Convert the visibleElements array into a map of breakpoint widths to the number of items to display at that width
 const visibleElementsPx = visibleElements.reduce<any>((acc, { breakpoint, items }) => {
@@ -13,7 +14,7 @@ const visibleElementsPx = visibleElements.reduce<any>((acc, { breakpoint, items 
   return acc;
 }, {});
 ---
-
+{active ?
 <div class="overflow-y-visible flex flex-row gap-6 justify-center items-center mx-auto py-8 shrink-0">
     {arrows && <button id={`${name}_left`}>
         <svg class="h-7" viewBox="0 0 14.998 20"><path d="M.429 10.823l13 9a1 1 0 0 0 1.569-.822v-18a1 1 0 0 0-1.569-.823l-13 9a1.003 1.003 0 0 0 0 1.645z"/></svg>
@@ -83,3 +84,12 @@ const visibleElementsPx = visibleElements.reduce<any>((acc, { breakpoint, items 
         updateCarousel(0);
     });
 </script>
+
+:
+
+<div class="overflow-y-visible flex flex-row gap-6 justify-center items-center mx-auto py-8 shrink-0">
+    <div id={`${name}_grid`} class:list={['overflow-y-visible snap-center snap-mandatory scroll-smooth grid grid-cols-1 gap-12 max-w-7xl', `sm:grid-cols-${visibleElementsPx[640]}`, `md:grid-cols-${visibleElementsPx[768]}`, `lg:grid-cols-${visibleElementsPx[1024]}`, `xl:grid-cols-${visibleElementsPx[1280]}`, `2xl:grid-cols-${visibleElementsPx[1536]}`]}>
+        <slot />
+    </div>
+</div>
+}
