Fix broken link in footer with absolute link instead of relative link

--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -53,7 +53,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="nous-rejoindre">
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="/nous-rejoindre">
                                 Recrutement
                             </a>
                         </li>
