--- a/src/layouts/JobOfferLayout.astro
+++ b/src/layouts/JobOfferLayout.astro
@@ -15,7 +15,7 @@ const profile: string = frontmatter.profile.join("<br /><br />");
 
 <BaseLayout title="Offre d'emploi - LOG">
     <TitleBanner title={frontmatter.title}></TitleBanner>
-    <div class="flex flex-col gap-24 max-w-[88rem] mx-auto mb-12">
+    <div class="flex flex-col gap-24 max-w-[88rem] mx-auto mb-12 px-4 lg:px-0">
         <div class="flex flex-col lg:flex-row items-center lg:items-start gap-18">
             <Description>
                 <p class="text-2xl mb-16 text-justify" slot="description">
@@ -39,7 +39,7 @@ const profile: string = frontmatter.profile.join("<br /><br />");
                 hr_phone={frontmatter.hr_phone}
             />
         </div>
-        <div class="flex flex-col items-center px-4 lg:px-0">
+        <div class="flex flex-col items-center">
             <div class="flex flex-row gap-4 items-center">
                 <h2 class="font-bold text-3xl">
                     Entreprise
