--- a/src/components/ui/call_to_action.astro
+++ b/src/components/ui/call_to_action.astro
@@ -19,13 +19,13 @@ const { title, text, button, image, bgColor, textColor, href } = Astro.props as 
             <div class="absolute border-3 rounded-3xl border-black w-screen-2/3 lg:w-screen-1/3 translate-x-screen-1/6 lg:translate-x-screen-1/24 h-[calc(100%+4rem)] -translate-y-8"></div>
             <img class="w-full h-full" src={image} alt="Photo" />
         </div>
-        <div class="flex flex-col items-center p-20 basis-3/8 bg-black text-white">
+        <div class="flex flex-col items-center p-8 lg:p-20 basis-3/8 bg-black text-white">
             <div class="flex flex-col gap-12 max-w-lg">
                 <h1 class="font-bold text-4xl uppercase tracking-wide">{title}</h1>
                 <p class="font-medium text-xl">
                     <Fragment set:html={text} />
                 </p>
-                <a class={`p-4 ${bgColor} rounded-xl text-xl ${textColor} w-1/2`} href={href}>{button}</a>
+                <a class={`p-4 ${bgColor} rounded-xl text-xl ${textColor} w-fit`} href={href}>{button}</a>
             </div>
         </div>
     </div>
