--- a/src/pages/jobs/[slug].astro
+++ b/src/pages/jobs/[slug].astro
@@ -22,7 +22,7 @@ const { entry } = Astro.props;
 ---
 
 <JobOfferLayout title={entry.data.title} email={entry.data.hr_email}>
-  <Description>
+  <Description slot="description">
     <p class="text-2xl mb-16 text-justify" slot="description">
         <Fragment set:html={entry.data.description.join("<br /><br />")} />
     </p>
@@ -30,7 +30,7 @@ const { entry } = Astro.props;
         <Fragment set:html={entry.data.profile.join("<br /><br />")} />
     </p>
   </Description>
-  <Position
+  <Position slot="position"
     salary={entry.data.salary}
     starting_date={entry.data.starting_date}
     experience={entry.data.experience}
