--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -21,15 +21,15 @@
                 </div>
                 <div class="relative flex items-center my-auto">
                     <div class="flex items-center gap-2 ml-4 pl-4">
-                        <a class="block" href="#">
+                        <a class="block" href="https://www.linkedin.com/company/wearelog/" target="_blank">
                             <span class="sr-only">LinkedIn</span>
                             <svg class="w-9 h-9 fill-white" viewBox="0 0 105.54 105.54"><path d="M52.77 0C23.63 0 0 23.62 0 52.77s23.62 52.77 52.77 52.77 52.77-23.62 52.77-52.77S81.92 0 52.77 0zM35.31 82.38H22.36V40.77h12.95zm-6.48-47.01a7.55 7.55 0 1 1 0-15.1 7.55 7.55 0 1 1 0 15.1zm54.65 47.01H70.71V58.44c0-3.92-3.18-7.1-7.1-7.1s-7.1 3.18-7.1 7.1v23.94H43.5V40.83h12.1v5.73c6.76-11.04 27.89-9.67 27.89 8.48v27.34z"/></svg>
                         </a>
-                        <a class="ml-1 block" href="#">
+                        <a class="ml-1 block" href="https://www.instagram.com/log_inside/" target="_blank">
                             <span class="sr-only">Instagram</span>
                             <svg class="w-9 h-9 fill-white" viewBox="0 0 105.54 105.54"><path d="M52.77 0C23.63 0 0 23.62 0 52.77s23.62 52.77 52.77 52.77 52.77-23.62 52.77-52.77S81.92 0 52.77 0zm34.32 67.11c0 11.01-8.96 19.97-19.97 19.97H38.43c-11.01 0-19.97-8.96-19.97-19.97V38.42c0-11.01 8.96-19.97 19.97-19.97h28.69c11.01 0 19.97 8.96 19.97 19.97zM67.11 24.55H38.42c-7.65 0-13.88 6.22-13.88 13.88v28.69c0 7.65 6.22 13.88 13.88 13.88h28.69c7.65 0 13.88-6.22 13.88-13.88V38.43c0-7.65-6.22-13.88-13.88-13.88zM52.76 70.41a17.66 17.66 0 0 1-17.64-17.64 17.66 17.66 0 0 1 17.64-17.64A17.66 17.66 0 0 1 70.4 52.77a17.66 17.66 0 0 1-17.64 17.64zM71.1 38.49c-2.23 0-4.04-1.81-4.04-4.04s1.81-4.04 4.04-4.04 4.04 1.81 4.04 4.04-1.81 4.04-4.04 4.04z"/><circle cx="28.547" cy="68.947" r="11.55" transform="rotate(337.5)"/></svg>
                         </a>
-                        <a class="ml-1 block" href="#">
+                        <a class="ml-1 block" href="https://www.youtube.com/watch?v=V_A7tOPuUBs" target="_blank">
                             <span class="sr-only">Youtube</span>
                             <svg class="w-9 h-9 fill-white" viewBox="0 0 105.54 105.54"><path d="M52.77 0C23.63 0 0 23.62 0 52.77s23.62 52.77 52.77 52.77 52.77-23.62 52.77-52.77S81.92 0 52.77 0zm35.72 59.09c-.16 3.37-.41 7.57-.72 9.68-.73 5.55-4.03 8.75-10.19 9.32-4.39.37-12.46.81-24.77.81h-.09c-12.31 0-20.38-.44-24.77-.81-6.16-.57-9.46-3.77-10.19-9.32-.31-2.11-.56-6.31-.72-9.68-.16-3.32-.16-6.65 0-9.97.16-3.37.41-7.57.72-9.68.73-5.55 4.03-8.75 10.19-9.32 4.39-.37 12.46-.81 24.77-.81h.09c12.31 0 20.38.44 24.77.81 6.16.57 9.46 3.77 10.19 9.32.31 2.11.56 6.31.72 9.68.16 3.32.16 6.65 0 9.97zM44.95 41.37v25.45l19.87-12.71z"/></svg>
                         </a>
