Use yellow background for loggers page

--- a/src/pages/les-loggers.astro
+++ b/src/pages/les-loggers.astro
@@ -48,5 +48,5 @@ import LoggersBannerReference from "@static/loggers-banner.avif";
         textColor={TextColor.BLACK}
         href="/nous-rejoindre"
     />
-    <SectionTeam activeCarousel={false} bgCardColor={BackgroundColor.WHITE}/>
+    <SectionTeam activeCarousel={false} bgCardColor={BackgroundColor.YELLOW}/>
 </BaseLayout>
