Create `Métiers` page and update links

--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
+                            <a class="decoration-2 hover:underline hover:underline-offset-4" href="/metiers">
                                 Métiers
                             </a>
                         </li>
