--- a/src/components/ui/header.astro
+++ b/src/components/ui/header.astro
@@ -17,7 +17,7 @@
                                 <a class="hover:text-red-log" href="/expertise">Expertise</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="#">Métiers</a>
+                                <a class="hover:text-blue-log" href="/metiers">Métiers</a>
                             </li>
                             <li>
                                 <a class="hover:text-green-log" href="/engagements">Engagements</a>
@@ -26,10 +26,10 @@
                                 <a class="hover:text-yellow-log" href="/les-loggers">Les Loggers</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="/nous-rejoindre">Nous rejoindre</a>
+                                <a class="hover:text-gray-dark" href="/nous-rejoindre">Nous rejoindre</a>
                             </li>
                             <li>
-                                <a class="hover:text-blue-log" href="/blog">Blog</a>
+                                <a class="hover:text-gray-dark" href="/blog">Blog</a>
                             </li>
                         </ul>
                     </div>
@@ -48,7 +48,7 @@
                                     <a class="hover:text-red-log" href="/expertise">Expertise</a>
                                 </li>
                                 <li>
-                                    <a class="hover:text-blue-log" href="#">Métiers</a>
+                                    <a class="hover:text-blue-log" href="/metiers">Métiers</a>
                                 </li>
                                 <li>
                                     <a class="hover:text-green-log" href="/engagements">Engagements</a>
@@ -57,10 +57,10 @@
                                     <a class="hover:text-yellow-log" href="/les-loggers">Les Loggers</a>
                                 </li>
                                 <li>
-                                    <a class="hover:text-blue-log" href="/nous-rejoindre">Nous rejoindre</a>
+                                    <a class="hover:text-gray-dark" href="/nous-rejoindre">Nous rejoindre</a>
                                 </li>
                                 <li>
-                                    <a class="hover:text-blue-log" href="/blog">Blog</a>
+                                    <a class="hover:text-gray-dark" href="/blog">Blog</a>
                                 </li>
                             </ul>
                         </div>
