--- a/src/components/homepage/section_expertise.astro
+++ b/src/components/homepage/section_expertise.astro
@@ -25,7 +25,7 @@ import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.avif
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">Les métiers</h1>
                     <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
-                    <a class="bg-blue-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2 w-fit" href="/nous-rejoindre">Découvrir nos métiers</a>
+                    <a class="bg-blue-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2 w-fit" href="/metiers">Découvrir nos métiers</a>
                 </div>
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">L'engagement</h1>
