Add left border everytime but brighter when hovering

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -21,13 +21,13 @@ const allBlogEntries = await getCollection("blog");
                             </summary>
                             <ul class="space-y-2">
                                 <li>
-                                    <a class="pl-4 hover:border-l border-current hover:underline hover:underline-offset-4" href="#">Titre article blog</a>
+                                    <a class="pl-4 border-l border-neutral-700 hover:border-current hover:underline hover:underline-offset-4" href="#">Titre article blog</a>
                                 </li>
                                 <li>
-                                    <a class="pl-4 hover:border-l border-current hover:underline hover:underline-offset-4" href="#">Titre article blog</a>
+                                    <a class="pl-4 border-l border-neutral-700 hover:border-current hover:underline hover:underline-offset-4" href="#">Titre article blog</a>
                                 </li>
                                 <li>
-                                    <a class="pl-4 hover:border-l border-current hover:underline hover:underline-offset-4" href="#">Titre article blog</a>
+                                    <a class="pl-4 border-l border-neutral-700 hover:border-current hover:underline hover:underline-offset-4" href="#">Titre article blog</a>
                                 </li>
                             </ul>
                         </details>
